<resources>
    <string name="app_name">Ask&amp;Answer</string>

    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Olvidaste la contraseña?</string>
    <string name="no_account">No tienes cuenta?</string>
    <string name="register">Registrarse</string>

    <string name="tag">Gustos</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>

    <string name="name">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="document">Documento</string>
    <string name="email">Correo</string>
    <string name="country">Pais</string>
    <string name="city">Ciudad</string>
    <string name="sex">Sexo</string>
    <string name="radiopt_masculino">M</string>
    <string name="radiopt_femenino">F</string>
    <string name="radiopt_otro">Otro</string>
    <string name="field_birthdate">Ingrese fecha</string>
    <string name="text_birthdate">Fecha de nacimiento</string>
    <string name="field_confirmpassword">Confirme contraseña</string>
    <string name="cancelar">Cancelar</string>

    <string name="cuenta">Cuenta</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="pagos">Pagos</string>
    <string name="carrito">Carrito</string>
    <string name="saldo_ganado">Saldo ganado</string>

    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="ayuda">Ayuda y comentarios</string>
    <string name="acercaDe">Acerca de la aplicación</string>

    <string name="inputEncuestaNombre">Nombre encuesta</string>
    <string name="inputEncuestaDescripcion">Descripción encuesta</string>
    <string name="inputbtnsave">Guardar</string>

    <string name="buscarCodigo">Ingresar Código.</string>
    <string name="buscarCodigoBTN">Contestar</string>

    <string name="MensajeNoHayEncuestas">No tienes encuestas para resolver.</string>
    <string name="CrearLanzamiento">Crear lanzamiento</string>
    <string-array name="TipoPreguntas">
        <item>Respuesta abierta.</item>
        <item>Opcion Multiple.</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_encuesta">Crear encuesta</string>
</resources>