<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.Register">

    <data>
        <variable
            name="RegisterModel"
            type="com.dnavarro.askanswerviews.viewmodels.RegisterViewModel"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_xwide">

            <TextView
                android:id="@+id/title_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_wide"
                android:text="@string/register"
                android:textSize="@dimen/text_large" />

            <EditText
                android:id="@+id/field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_register"
                android:layout_marginBottom="@dimen/margin_medium"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/field_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_name"
                android:layout_marginBottom="@dimen/margin_medium"
                android:hint="@string/last_name" />

            <TextView
                android:id="@+id/field_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_lastname"
                android:layout_marginTop="@dimen/margin_wide"
                android:layout_marginBottom="@dimen/margin_wide"
                android:hint="@string/field_birthdate" />


            <RadioGroup
                android:id="@+id/field_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_birthdate"
                android:layout_marginTop="@dimen/margin_wide"
                android:layout_marginBottom="@dimen/margin_wide"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:layout_weight="1"
                    android:hint="@string/sex" />

                <RadioButton
                    android:id="@+id/radiopt_m"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_weight="2"
                    android:checked="true"
                    android:text="@string/radiopt_masculino" />

                <RadioButton
                    android:id="@+id/radiopt_f"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_weight="2"
                    android:text="@string/radiopt_femenino" />

                <RadioButton
                    android:id="@+id/radiopt_otro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_weight="2"
                    android:text="@string/radiopt_otro" />

            </RadioGroup>

            <EditText

                android:id="@+id/field_document"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_sex"
                android:layout_marginBottom="@dimen/margin_medium"
                android:hint="@string/document" />

            <TextView
                android:id="@+id/field_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/field_document"
                android:layout_marginTop="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_wide"
                android:layout_marginBottom="@dimen/margin_wide"
                android:hint="@string/country"
                android:textAlignment="center"
                android:textSize="16sp" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/picker_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/field_document"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_wide"
                android:layout_toEndOf="@id/field_country"
                app:ccpDialog_showNameCode="false"
                app:ccp_defaultPhoneCode="503"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="false" />

            <EditText
                android:id="@+id/field_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_country"
                android:layout_marginBottom="@dimen/margin_medium"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_city"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/margin_medium"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/field_altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_email"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/margin_medium"
                android:hint="@string/altura" />

            <EditText
                android:id="@+id/field_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_altura"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/margin_medium"
                android:hint="@string/peso" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_peso"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/margin_medium"
                android:hint="@string/password" />

            <EditText
                android:id="@+id/field_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_password"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/margin_medium"
                android:hint="@string/field_confirmpassword" />

            <Spinner
                android:id="@+id/spinner_preferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/field_confirmpassword"
                android:layout_marginTop="@dimen/margin_medium" />

            <LinearLayout
                android:id="@+id/lineaAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner_preferences"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/add_chip"
                    android:layout_weight="9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:hint="@string/tag" />

                <Button
                    android:id="@+id/add_chip_btn"
                    android:layout_width="68dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_wide"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="ADD" />

            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:layout_marginTop="24dp"
                app:List="@{RegisterModel.tags}"
                android:id="@+id/list_tags"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lineaAdd"

                />

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/list_tags"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_wide"
                android:text="@string/register" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/list_tags"
                android:layout_marginTop="@dimen/margin_wide"
                android:layout_toStartOf="@+id/button_register"
                android:text="@string/cancelar" />

        </RelativeLayout>
    </ScrollView>
</layout>