<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.FrontPage">

    <data>
        <variable
            name="userModel"
            type="com.dnavarro.askanswerviews.viewmodels.Userviewmodel"
            />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_xwide"
        >

        <TextView
            style="@android:style/Widget.EditText"
            app:errorMsg="@{userModel.msg}"
            android:id="@+id/title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/field_email"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:text="@string/login"
            android:textSize="@dimen/text_large" />

        <EditText

            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:text="@{userModel.mail}"
            android:layout_above="@+id/field_password"
            />

        <EditText
            android:layout_centerVertical="true"
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:text="@{userModel.password}"
            android:layout_marginBottom="@dimen/margin_wide"/>

        <Button
            android:id="@+id/button_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_below="@+id/field_password"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:text="@string/register"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/button_signin"
            android:layout_below="@+id/field_password"/>


    </RelativeLayout>
</layout>



